--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 body {
   background-color: #254162;
   font-family: sans-serif;
+  letter-spacing: 1.2px;
 }
 .base {
   margin: 40px auto;
@@ -18,6 +19,16 @@ body {
   padding-bottom: 20px;
   border-radius: 20px;
   box-shadow: -10px 5 20px 15 rgba(3, 2, 6, 0.387);
+}
+.display {
+  background-color: #254162;
+  color: #d5e2e9;
+  padding: 30px;
+  border-radius: 20px 20px 0px 80px;
+  box-shadow: 0 10px 10px rgba(65, 50, 100, 0.592);
+}
+header {
+    margin-bottom: 40px;
 }
 .search-input {
   background-color: #d5e2e9;
@@ -40,12 +51,44 @@ main {
   display: flex;
   justify-content: space-between;
 }
-.display {
-  background-color: #254162;
-  color: #d5e2e9;
-  padding: 30px;
-  border-radius: 20px 20px 0px 80px;
-  box-shadow: 0 10px 10px rgba(65, 50, 100, 0.592);
+
+.current-city {
+  font-size: 15px;
+  margin-bottom: 5px;
+}
+.current-condition {
+  font-size: 45px;
+  font-weight: 300;
+  margin: 5px;
+}
+.current-temperature-value {
+    font-size: 40px;
+    margin: 5px;
+    font-weight: lighter;
+}
+.current-temperature-unit {
+    font-size: 15px;
+    position: relative;
+    top: -17px;
+}
+.current-weather-icon {
+    font-size: 100px;
+}
+
+.current-details {
+  font-size: 15px;
+  color: #babbe591;
+  font-weight: 300;
+}
+.material-symbols-outlined {
+  font-size: 15px;
+  font-weight: 300;
+}
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  padding-inline-start: 0;
 }
 footer {
   text-align: center;
@@ -56,10 +99,4 @@ footer a {
   text-decoration: none;
   color: #254162a4;
   font-weight: bold;
-}
-ul {
-  list-style: none;
-  display: flex;
-  justify-content: space-between;
-  padding-inline-start: 0;
 }
