--- a/style.css
+++ b/style.css
@@ -1,9 +1,38 @@
 .material-symbols-outlined {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
+.lato-thin {
+  font-family: "Lato", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.lato-light {
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.lato-regular {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.lato-bold {
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.lato-black {
+  font-family: "Lato", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
 body {
   background-color: #254162;
-  font-family: sans-serif;
+  font-family: Lato;
   letter-spacing: 1.2px;
 }
 .base {
@@ -58,13 +87,13 @@ main {
 }
 .current-condition {
   font-size: 45px;
-  font-weight: 300;
+  font-weight: 600;
   margin: 5px;
 }
 .current-temperature-value {
   font-size: 40px;
   margin: 5px;
-  font-weight: lighter;
+  font-weight: 300;
 }
 .current-temperature-unit {
   font-size: 15px;
@@ -78,7 +107,9 @@ main {
 .current-details {
   font-size: 15px;
   color: #babbe591;
-  font-weight: 300;
+  font-weight: 400;
+  position: relative;
+  bottom: -20px;
 }
 .material-symbols-outlined {
   font-size: 15px;
@@ -95,7 +126,7 @@ ul {
 footer {
   text-align: center;
   color: #25416298;
-  font-size: 15px;
+  font-size: 13px;
 }
 footer a {
   text-decoration: none;
