Injected in js the icon element

--- a/style.css
+++ b/style.css
@@ -73,8 +73,9 @@ main {
   position: relative;
   top: -17px;
 }
-.current-weather-icon {
-  font-size: 100px;
+
+.weather-app-icon {
+  width: 160px;
 }
 
 .current-details {
