--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   letter-spacing: 1.2px;
 }
 .base {
-  margin: 23px auto;
+  margin: 12px auto;
   padding: 5px;
   border-radius: 20px;
   max-width: 600px;
@@ -80,10 +80,8 @@ main {
 
 .current-details {
   font-size: 15px;
-  color: #babbe5da;
+  color: #d5e2e9c2;
   font-weight: 400;
-  position: relative;
-  bottom: -20px;
 }
 .material-symbols-outlined {
   font-size: 17px;
@@ -96,6 +94,7 @@ ul {
   display: flex;
   justify-content: space-between;
   padding-inline-start: 0;
+  margin: 0;
 }
 footer {
   text-align: center;
@@ -110,18 +109,17 @@ footer a {
 .weather-forecast-row {
   display: flex;
   justify-content: space-between;
-  padding: 5px 35px 20px 35px;
+  padding: 0 35px 20px 35px;
   color: #254162ce;
-  font-size: 17px;
+  font-size: 15px;
   text-align: center;
   border-bottom: 1px solid #2541621a;
 }
 .weather-forecast-icon {
-  font-size: 25px;
+  width: 80px;
 }
 .weather-forecast-temperatures {
   font-size: 14px;
-  margin-top: 5px;
 }
 .weather-forecast-temperature-max {
   font-weight: bolder;
