--- a/style.css
+++ b/style.css
@@ -115,6 +115,12 @@ footer a {
   text-align: center;
   border-bottom: 1px solid #2541621a;
 }
+.weather-forecast-single-day:hover {
+  background-color: #2541620a;
+  border-radius: 10px;
+  transition: all 300ms ease-in-out;
+  transform: scale(1.2);
+}
 .weather-forecast-icon {
   width: 80px;
 }
